# trail_agent

./: .gitignore  agents.py  pyproject.toml  requirements.txt  tasks.py
agent_trial/src/agent_trial/config/: agents.yaml  tasks.yaml
agent_trial/src/agent_trial/tools/: tools.py
src/: crew.py
